// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Alert > should render 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col overflow-hidden rounded-xl"
  >
    <div
      class="flex items-center space-x-2 px-4 py-2 text-sm font-semibold dark:text-white bg-theme-warning-100 text-theme-warning-700 dark:bg-theme-warning-700"
    >
      <div
        class="css-v0ob3f"
        height="16"
        width="16"
      >
        <svg
          id="circle-exclamation-mark"
          viewBox="0 0 20 20"
          x="0"
          xml:space="preserve"
          xmlns="http://www.w3.org/2000/svg"
          y="0"
        >
          <g
            fill="none"
            stroke="currentColor"
            stroke-width="2"
          >
            <circle
              cx="10"
              cy="10"
              r="9"
              stroke-miterlimit="10"
            />
            <path
              d="M10 10.5v-5"
              stroke-linecap="round"
              stroke-miterlimit="10"
            />
            <path
              d="M10 14h0"
              stroke-linecap="round"
              stroke-linejoin="round"
            />
          </g>
        </svg>
      </div>
      <span>
        Warning
      </span>
    </div>
    <div
      class="w-full break-words p-4 text-left text-sm leading-relaxed dark:bg-theme-secondary-800 bg-theme-warning-50"
    >
      <span>
        Hello World!
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Alert > should render as collapsible 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col overflow-hidden rounded-xl"
  >
    <div
      class="flex items-center space-x-2 px-4 py-2 text-sm font-semibold dark:text-white bg-theme-warning-100 text-theme-warning-700 dark:bg-theme-warning-700 cursor-pointer"
    >
      <div
        class="css-v0ob3f"
        height="16"
        width="16"
      >
        <svg
          id="circle-exclamation-mark"
          viewBox="0 0 20 20"
          x="0"
          xml:space="preserve"
          xmlns="http://www.w3.org/2000/svg"
          y="0"
        >
          <g
            fill="none"
            stroke="currentColor"
            stroke-width="2"
          >
            <circle
              cx="10"
              cy="10"
              r="9"
              stroke-miterlimit="10"
            />
            <path
              d="M10 10.5v-5"
              stroke-linecap="round"
              stroke-miterlimit="10"
            />
            <path
              d="M10 14h0"
              stroke-linecap="round"
              stroke-linejoin="round"
            />
          </g>
        </svg>
      </div>
      <span>
        Warning
      </span>
      <span
        class="!ml-auto transform transition-transform duration-100 rotate-180 text-theme-warning-700 dark:text-white"
        data-testid="Alert__chevron"
      >
        <div
          class="transition-transform duration-200 rotate-180 css-15txs7d"
          height="10"
          width="10"
        >
          <svg
            id="chevron-down-small"
            viewBox="0 0 10 10"
            x="0"
            xml:space="preserve"
            xmlns="http://www.w3.org/2000/svg"
            y="0"
          >
            <path
              d="M9 3.1L5.2 6.9c-.1.1-.3.1-.4 0L1 3.1"
              fill="none"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            />
          </svg>
        </div>
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Alert > should render as danger alert 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col overflow-hidden rounded-xl"
  >
    <div
      class="flex items-center space-x-2 px-4 py-2 text-sm font-semibold dark:text-white bg-theme-danger-100 text-theme-danger-700 dark:bg-theme-danger-500"
    >
      <div
        class="css-v0ob3f"
        height="16"
        width="16"
      >
        <svg
          id="circle-cross"
          viewBox="0 0 20 20"
          x="0"
          xml:space="preserve"
          xmlns="http://www.w3.org/2000/svg"
          y="0"
        >
          <g
            fill="none"
            stroke="currentColor"
            stroke-width="2"
          >
            <circle
              cx="10"
              cy="10"
              r="9"
              stroke-miterlimit="10"
            />
            <path
              d="M7 13l6-6M13 13L7 7"
              stroke-linecap="round"
              stroke-linejoin="round"
            />
          </g>
        </svg>
      </div>
      <span>
        Error
      </span>
    </div>
    <div
      class="w-full break-words p-4 text-left text-sm leading-relaxed dark:bg-theme-secondary-800 bg-theme-danger-50"
    >
      <span>
        Hello World!
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Alert > should render as hint alert 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col overflow-hidden rounded-xl"
  >
    <div
      class="flex items-center space-x-2 px-4 py-2 text-sm font-semibold dark:text-white bg-theme-hint-100 text-theme-hint-700 dark:bg-theme-hint-700"
    >
      <div
        class="css-v0ob3f"
        height="16"
        width="16"
      >
        <svg
          id="circle-question-mark"
          viewBox="0 0 20 20"
          x="0"
          xml:space="preserve"
          xmlns="http://www.w3.org/2000/svg"
          y="0"
        >
          <g
            fill="none"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
          >
            <circle
              cx="10"
              cy="10"
              r="9"
            />
            <path
              d="M10 13.6h0M8.3 7.9c0-.9.7-1.7 1.7-1.7s1.7.7 1.7 1.7c0 .7-.4 1.4-1.2 1.6-.3.1-.5.4-.5.7v.8"
            />
          </g>
        </svg>
      </div>
      <span>
        Help
      </span>
    </div>
    <div
      class="w-full break-words p-4 text-left text-sm leading-relaxed dark:bg-theme-secondary-800 bg-theme-hint-50"
    >
      <span>
        Hello World!
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Alert > should render as info alert 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col overflow-hidden rounded-xl"
  >
    <div
      class="flex items-center space-x-2 px-4 py-2 text-sm font-semibold dark:text-white bg-theme-info-100 text-theme-info-700 dark:bg-theme-info-700"
    >
      <div
        class="css-v0ob3f"
        height="16"
        width="16"
      >
        <svg
          id="circle-info"
          viewBox="0 0 20 20"
          x="0"
          xml:space="preserve"
          xmlns="http://www.w3.org/2000/svg"
          y="0"
        >
          <g
            fill="none"
            stroke="currentColor"
            stroke-width="2"
          >
            <circle
              cx="10"
              cy="10"
              r="9"
              stroke-miterlimit="10"
            />
            <path
              d="M10 9.2v5"
              stroke-linecap="round"
              stroke-miterlimit="10"
            />
            <path
              d="M10 5.8h0"
              stroke-linecap="round"
              stroke-linejoin="round"
            />
          </g>
        </svg>
      </div>
      <span>
        Information
      </span>
    </div>
    <div
      class="w-full break-words p-4 text-left text-sm leading-relaxed dark:bg-theme-secondary-800 bg-theme-info-50"
    >
      <span>
        Hello World!
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Alert > should render as success alert 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col overflow-hidden rounded-xl"
  >
    <div
      class="flex items-center space-x-2 px-4 py-2 text-sm font-semibold dark:text-white bg-theme-success-100 text-theme-success-700 dark:bg-theme-success-700"
    >
      <div
        class="css-v0ob3f"
        height="16"
        width="16"
      >
        <svg
          id="circle-check-mark"
          viewBox="0 0 20 20"
          x="0"
          xml:space="preserve"
          xmlns="http://www.w3.org/2000/svg"
          y="0"
        >
          <g
            fill="none"
            stroke="currentColor"
            stroke-width="2"
          >
            <circle
              cx="10"
              cy="10"
              r="9"
              stroke-miterlimit="10"
            />
            <path
              d="M13.6 6.5l-5 6.8c-.2.3-.6.4-.9.2l-.1-.1L6.4 12"
              stroke-linecap="round"
              stroke-linejoin="round"
            />
          </g>
        </svg>
      </div>
      <span>
        Success
      </span>
    </div>
    <div
      class="w-full break-words p-4 text-left text-sm leading-relaxed dark:bg-theme-secondary-800 bg-theme-success-50"
    >
      <span>
        Hello World!
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Alert > should render as warning alert 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col overflow-hidden rounded-xl"
  >
    <div
      class="flex items-center space-x-2 px-4 py-2 text-sm font-semibold dark:text-white bg-theme-warning-100 text-theme-warning-700 dark:bg-theme-warning-700"
    >
      <div
        class="css-v0ob3f"
        height="16"
        width="16"
      >
        <svg
          id="circle-exclamation-mark"
          viewBox="0 0 20 20"
          x="0"
          xml:space="preserve"
          xmlns="http://www.w3.org/2000/svg"
          y="0"
        >
          <g
            fill="none"
            stroke="currentColor"
            stroke-width="2"
          >
            <circle
              cx="10"
              cy="10"
              r="9"
              stroke-miterlimit="10"
            />
            <path
              d="M10 10.5v-5"
              stroke-linecap="round"
              stroke-miterlimit="10"
            />
            <path
              d="M10 14h0"
              stroke-linecap="round"
              stroke-linejoin="round"
            />
          </g>
        </svg>
      </div>
      <span>
        Warning
      </span>
    </div>
    <div
      class="w-full break-words p-4 text-left text-sm leading-relaxed dark:bg-theme-secondary-800 bg-theme-warning-50"
    >
      <span>
        Hello World!
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Alert > should render as warning-dark alert 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col overflow-hidden rounded-xl"
  >
    <div
      class="flex items-center space-x-2 px-4 py-2 text-sm font-semibold dark:text-white"
    >
      <div
        class="css-v0ob3f"
        height="16"
        width="16"
      />
      <span>
        COMMON.ALERT.WARNING-DARK
      </span>
    </div>
    <div
      class="w-full break-words p-4 text-left text-sm leading-relaxed dark:bg-theme-secondary-800"
    >
      <span>
        Hello World!
      </span>
    </div>
  </div>
</DocumentFragment>
`;
